--- a/BGG/index.html
+++ b/BGG/index.html
@@ -4,12 +4,20 @@
 		
 		<head>
 			<meta charset="utf-8">	
+			<meta name="description" content="Board Games">
+			<meta name="keywords" content="boardgamegeek, board game geek, board games, tabletop, tabletop gaming">
+			<title>Board Game Geek</title>
 
 		</head>
 		<body>
 			<header>
-				
+				<h1>Welcome to BoardGameGeek!</h1>
+				<h3>Home to the largest board game database on the internet</h3>
 			</header>
+			<img src="images/bgg.png" alt="boardgamegeek logo">
+			<p>Lorem ipsum dolor sit amet, boardgamegeek consectetur adipiscing elit. Vestibulum quis ligula justo. In sed sem quis nibh condimentum blandit. Ut in nisl id ligula lobortis dignissim. Proin tincidunt mollis augue, in eleifend neque. Nulla posuere id arcu tabletop gaming non interdum. Aenean nisi metus, imperdiet ac dapibus vel, iaculis vel lorem. Mauris lobortis luctus ornare. Donec at mauris board game geek in ipsum tincidunt vestibulum in et velit. Donec venenatis commodo imperdiet. Phasellus luctus diam sit amet diam rutrum, in venenatis arcu scelerisque. Morbi ac velit a odio congue tempor. Morbi feugiat, arcu in consectetur elementum, metus enim fringilla boardgamegeek  ipsum, ac iaculis lacus est non enim. Nam elementum rhoncus tortor, vitae vehicula massa ullamcorper sed. Mauris euismod accumsan neque. Vestibulum vel auctor metus.
+
+			Donec elit ex, ultrices ultricies purus eu, fermentum maximus felis. Nam eleifend, dui non boardgamegeek  faucibus gravida, tellus metus cursus tortor, et sodales ex ex aliquam mauris. In at tempus board games urna. Phasellus volutpat mollis urna eu tincidunt. Donec malesuada sollicitudin eros accumsan suscipit. Vivamus in dui augue. Aenean eu nisl mattis, semper quam ac, porta sapien. Nullam tabletop commodo magna ligula, pretium boardgamegeek molestie nunc finibus eu. Maecenas justo elit, blandit et tortor non, hendrerit varius mauris. Phasellus aliquam, ipsum vitae tincidunt tincidunt, erat boardgamegeek lorem faucibus arcu, a laoreet quam quam sit amet purus. </p>
 			<footer>
 				
 			</footer>
