--- a/Homework #3/index.html
+++ b/Homework #3/index.html
@@ -1,45 +1,62 @@
 <!doctype html>
-
-	<html lang="en">
+<html lang="en">
 		
-		<head>
-			<meta charset="utf-8">
-			<meta name="description" content="Pitcher's Pub">
-			<meta name="keywords" content="Pitcher's Pub, Manayunk beer, Manayunk pub,
-			East Falls beer, East Falls bar, Roxborough beer, Roxborough bar">
-			<link rel="stylesheet" href="css/style.css">
-			<title>Pitcher's Pub</title>
+			<head>
+				<meta charset="utf-8">
+				<meta name="description" content="Pitcher's Pub">
+				<meta name="keywords" content="Pitcher's Pub, Manayunk beer, Manayunk pub,
+				East Falls beer, East Falls bar, Roxborough beer, Roxborough bar">
+				<link rel="stylesheet" href="css/style.css">
+				<title>Pitcher's Pub</title>
+			</head>
 
-		</head>
-		<body>
-			<header>
-			<img src="images/logo.png" alt="Pitcher's Pub logo" align="top, left">
-			<div class="list">
-			<ul>
-				<li>Menu</li>
-				<li>Events</li>
-				<li>Abouts</li>
-			</ul>
-			</div>
-				
-			</header>
-			<h1>Events</h1>
-			<h3>Wednesday Night Quizzo</h3>
-			<p>$4 Local beers 9-11pm</p>
-			<h3>Thursday Night w/ 97.5's Sean Brace</h3>
-			<p>Even though Thursday Night Football is over that doesn't mean the party has ended. Instead of on the mic, 97.5's Sean Brace is on the 1's and 2's. Come out and join Manayunk's best Thursday night crowd. Drink specials include $3 Bud and Bud Light Drafts.
-			<h3>Every Friday</h3>
-			<p>Get you Growler filled every Friday for only $10. We will be rotating one of our Draft each weak an it will be available for only $10 to fill up. Stop in anytime on Friday to get your Growler filled for take home enjoyment. Don't forget every tenth fill up is on us.
-			</p>
-			<img src="images/pitchersinterior.jpg" alt="Interior of Pitcher's Pub">
+			<body>
+				<header>
+					<div class="wrapper">
+						<div class="logo">
+							<img src="images/logo.png" alt="Pitcher's Pub logo">
+						</div>
 
-			<footer>
-				<p>&copy; Pitcher's Pub 2016</p>
-			</footer>
-		</body>
+						<ul>
+							<li><a href="#">Menu</a></li>
+							<li><a href="#">Events</a></li>
+							<li><a href="#">Abouts</a></li>
+						</ul>
+						<div style="clear:both;"></div>
+					</div>
+				</header>
+
+				<div class="content">
+					<div class="wrapper">
+						<div class="main-content">
+							<h1>Events</h1>
+
+							<h2>Wednesday Night Quizzo</h2>
+							<p>$4 Local beers 9-11pm</p>
+
+							<h2>Thursday Night w/ 97.5's Sean Brace</h2>
+							<p>Even though Thursday Night Football is over that doesn't mean the party has ended. Instead of on the mic, 97.5's Sean Brace is on the 1's and 2's. Come out and join Manayunk's best Thursday night crowd. Drink specials include $3 Bud and Bud Light Drafts.</p>
+
+							<h2>Every Friday</h2>
+							<p>Get you Growler filled every Friday for only $10. We will be rotating one of our Draft each weak an it will be available for only $10 to fill up. Stop in anytime on Friday to get your Growler filled for take home enjoyment. Don't forget every tenth fill up is on us.
+							</p>
+						</div>
+
+							<img src="images/pitchersinterior.jpg" alt="Interior of Pitcher's Pub">
+
+							<div style="clear:both;"></div>
+						</div>
+					</div>
+
+				<footer>
+					<div class="wrapper">
+						<p> &copy; Pitcher's Pub 2016</p>
+					</div>
+				</footer>
+			</body>
 
 
 
 
 
-	</html>
+		</html>
