--- a/Homework #4/index.html
+++ b/Homework #4/index.html
@@ -26,7 +26,7 @@
 					<img src="images/bgg.png" alt="boardgamegeek logo" a href="http://www.boardgamegeek.com">
 				</div>
 				<ul>
-							<li><a href="#">Games</a></li>
+							<li><a href="http://www.sidrichmill.com/homework4/games">Games</a></li>
 							<li><a href="#">Market</a></li>
 							<li><a href="#">Forum</a></li>
 							<li><a href="#">Events</a></li>
