--- a/Homework #5/index.html
+++ b/Homework #5/index.html
@@ -24,9 +24,9 @@
 			<header>
 			<div class="wrapper">
 				<div class="logo">
-					<img src="images/BGG-Logo.png" alt="boardgamegeek logo" a href="http://www.boardgamegeek.com">
+					<img src="images/BGG-Logo.png" alt="boardgamegeek logo" a href="http://www.boardgamegeek.com">	
 				</div>
-
+				<h1>BoardGameGeek</h1>
 					<div class="nav">
 						<ul>
 							<li><a href="http://www.sidrichmill.com/homework4/games">Games</a></li>
