--- a/Homepage/forum.html
+++ b/Homepage/forum.html
@@ -45,7 +45,7 @@
 
 						<div class="card">
 							<h4>Recommendations</h4>
-							<p>Post requests for game recommendations and make game suggestions here.</p>
+							<p>Post game recommendations and requests here.</p>
 						</div>
 
 						<div class="card">
