--- a/Homepage/forum/generalgaming.html
+++ b/Homepage/forum/generalgaming.html
@@ -15,7 +15,7 @@
 		<body>
 			<header>
 				<div class="wrapper">
-				<a href="index.html">
+				<a href="../index.html">
 					<div class="logo">
 						<img src="../images/bgg.png" alt="boardgamegeek logo">
 						</div>
@@ -36,13 +36,17 @@
 			 <div class="pageheader">
 
 				<h1 class="title">General Gaming</h1>
+			<div class="center">
 				<div class="search">
 					<form>
 					<div class="searchbar">
 						<input type="search" name="forumsearch" placeholder="  Search Forums">
-						<button type="submit">+ New Topic</button>
 						</div>
-					</form>
+						</form>
+						<a href="#">Search</a>
+						<a href="#">+ New Topic</a>
+			</div>
+						
 			</div>
 			<div class="topictable">
 			<table>
