--- a/Homepage/games/legacy.html
+++ b/Homepage/games/legacy.html
@@ -36,17 +36,14 @@
 				<div class="score">
 					<h1>8.4</h1>
 				</div>
-				<div class="floater">
-					<div class="overviewfloater">
-						<h4>Overview</h4>
-					</div>
-					<div class="descriptionfloater">
-						<h4>Description</h4>
-					</div>
-				</div>
 					<div class="overview">
 						<img src="../images/legacyboxfull.png" alt="Pandemic Legacy Box Art">
+						
 						<div class="details">
+							<div class="overviewfloater">
+								<h4>Overview</h4>
+							</div>
+						<div class="box">
 							<h3>Pandemic Legacy: Season 1</h3>
 							<ul>
 							<li>2-4 players</li>
@@ -54,9 +51,48 @@
 							<li>Ages 13+</li>
 							</ul>
 						</div>
+						</div>
 					</div>
 					<div class="description">
+						<div class="descriptionfloater">
+							<h4>Description</h4>
+						</div>
 						<p>Pandemic Legacy is a co-operative campaign game, with an overarching story-arc played through 12-24 sessions, depending on how well your group does at the game. At the beginning, the game starts very similar to basic Pandemic, in which your team of disease-fighting specialists races against the clock to travel around the world, treating disease hotspots while researching cures for each of four plagues before they get out of hand.</p>
+					</div>
+					<div class="files">
+						<div class="filesfloater">
+							<h4>Files</h4>
+						</div>
+						<div class="info">
+						<h4>Pandemic Legacy rules - English - no spoilers</h4>
+						
+						<p>The rules shown as they come out of the box, before any "Legacy" changes have…</p>
+
+						<h4> Pandemic Legacy Reset Kit</h4>
+						<p>A collection of files with instructions on resetting a game of Pandemic Legacy assuming you haven't physically destroyed any…</p>
+
+						<h4> Paper box for cards</h4>
+						<p>No glue telescoping paper box 4,8 x 7 x 2 cm for cards, 5 variants, pdf file, v. 3.0. All for your lovely games GeekList with…</p>
+
+						<h4> Pandemic Legacy City List</h4>
+						<p>An Excel spreadsheet with a grid to track which cities are infected between epidemics. Intended as a strategy/memory aid to help players remember which cards are likely to be on…</p>
+
+						</div>
+					</div>
+					<div class="videos">
+						<div class="videosfloater">
+							<h4>Videos</h4>
+						</div>
+						<div class="videopreview">
+						<iframe src="https://www.youtube.com/embed/CQ5fy_RUcC0" frameborder="0" allowfullscreen></iframe>
+						</div>
+						<h4>Miami Dice, Episode 182 - Pandemic Legacy (Final Look)</h4>
+						<iframe src="https://www.youtube.com/embed/EwZ2rZKhMiI" frameborder="0" allowfullscreen></iframe>
+						<h4>Pandemic Legacy August Part 2 Blind Playthrough</h4>
+						<iframe src="https://www.youtube.com/embed/1ZTA_VawTHc" frameborder="0" allowfullscreen></iframe>
+						<h4>Pandemic Legacy November Play Through - House Rules </h4>
+						</div>
+
 					</div>
 				</div>
 
