--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -38,112 +38,160 @@
 					<div class="searchbar">
 						<input type="search" name="gamesearch" placeholder="  Search BoardGameGeek"><br><br>
 						</div>
-						<button type="submit">Submit</button>
-					</form>
+						</form>
+						<a href="search/searchresults.html">Submit</a>
 				</div>
 			</div>
-			<div class="wrapper">
-			<div class="grid">
+					<div class="wrapper">
+			<div class="gridgames">
 				<div class="wf-container">
-				  <div class="wf-box"> <img src="images/pl.png">
+				  <div class="wf-box">
+				  	<a href="games/legacy.html"> 
+				  		<img src="images/legacyboxfull.png">
+				  		</a>
 				    <div class="content">
-				      <h3>Title 1</h3>
-				      <p>Content Here</p>
+				    <a href="games/legacy.html">
+				      <h3>Pandemic Legacy: Season 1</h3>
+				      </a>
+				      <p><b>Score:</b> 8.442<b>    Price:</b> $46.55</p>
+				      <p></p>
 				    </div>
 				  </div>
-				  <div class="wf-box"> <img src="images/ts.jpg">
+
+				  <div class="wf-box">
+				  	<a href="games/legacy.html"> 
+				  		<img src="images/tta.jpg">
+				  		</a>
 				    <div class="content">
-				      <h3>Title 2</h3>
-				      <p>Content Here</p>
+				    <a href="games/legacy.html">
+				      <h3>Through the Ages: A New Story of Civilization</h3>
+				      </a>
+				      <p><b>Score:</b> 8.279<b>    Price:</b> $66.92</p>
 				    </div>
 				  </div>
-				  <div class="wf-box"> <img src="images/tta.jpg">
+
+				  <div class="wf-box">
+				  	<a href="games/legacy.html"> 
+				  		<img src="images/ts.jpg">
+				  		</a>
 				    <div class="content">
-				      <h3>Title 3</h3>
-				      <p>Content Here</p>
+				    <a href="games/legacy.html">
+				      <h3>Twilight Struggle</h3>
+				      </a>
+				      <p><b>Score:</b> 8.227<b>    Price:</b> $44.95</p>
 				    </div>
 				  </div>
-				  <div class="wf-box"> <img src="images/tm.jpg">
-				    <div class="content">
-				      <h3>Title 3</h3>
-				      <p>Content Here</p>
-				    </div>
-				    <div class="wf-box"> <img src="images/pl.png">
-				    <div class="content">
-				      <h3>Title 1</h3>
-				      <p>Content Here</p>
-				    </div>
-				  </div>
-				  <div class="wf-box"> <img src="images/ts.jpg">
-				    <div class="content">
-				      <h3>Title 2</h3>
-				      <p>Content Here</p>
-				    </div>
-				  </div>
-				  <div class="wf-box"> <img src="images/tta.jpg">
-				    <div class="content">
-				      <h3>Title 3</h3>
-				      <p>Content Here</p>
-				    </div>
-				  </div>
-				  <div class="wf-box"> <img src="images/tm.jpg">
-				    <div class="content">
-				      <h3>Title 3</h3>
-				      <p>Content Here</p>
-				    </div>
-				    <div class="wf-box"> <img src="images/pl.png">
-				    <div class="content">
-				      <h3>Title 1</h3>
-				      <p>Content Here</p>
-				    </div>
-				  </div>
-				  <div class="wf-box"> <img src="images/ts.jpg">
-				    <div class="content">
-				      <h3>Title 2</h3>
-				      <p>Content Here</p>
-				    </div>
-				  </div>
-				  <div class="wf-box"> <img src="images/tta.jpg">
-				    <div class="content">
-				      <h3>Title 3</h3>
-				      <p>Content Here</p>
-				    </div>
-				  </div>
-				  <div class="wf-box"> <img src="images/tm.jpg">
-				    <div class="content">
-				      <h3>Title 3</h3>
-				      <p>Content Here</p>
-				    </div>
-				    <div class="wf-box"> <img src="images/pl.png">
-				    <div class="content">
-				      <h3>Title 1</h3>
-				      <p>Content Here</p>
-				    </div>
-				  </div>
-				  <div class="wf-box"> <img src="images/ts.jpg">
-				    <div class="content">
-				      <h3>Title 2</h3>
-				      <p>Content Here</p>
-				    </div>
-				  </div>
-				  <div class="wf-box"> <img src="images/tta.jpg">
-				    <div class="content">
-				      <h3>Title 3</h3>
-				      <p>Content Here</p>
-				    </div>
-				  </div>
-				  <div class="wf-box"> <img src="images/tm.jpg">
-				    <div class="content">
-				      <h3>Title 3</h3>
-				      <p>Content Here</p>
-				    </div>
+
+				  	<div class="wf-box">
+				  		<a href="games/legacy.html"> 
+				  		<img src="images/tm.jpg">
+				  		</a>
+					    <div class="content">
+					    <a href="games/legacy.html">
+					      <h3>Terra Mystica</h3>
+					      </a>
+					      <p><b>Score:</b> 8.150<b>    Price:</b> $45.65</p>
+					    </div>
+					</div>
+
+					<div class="wf-box">
+				  		<a href="games/legacy.html"> 
+				  		<img src="images/caverna.jpg">
+				  		</a>
+					    <div class="content">
+					    <a href="games/legacy.html">
+					      <h3> 	Caverna: The Cave Farmers</h3>
+					      </a>
+					      <p><b>Score:</b> 8.036<b>    Price:</b> $70.00</p>
+					    </div>
+					</div>
+
+					<div class="wf-box">
+				  		<a href="games/legacy.html"> 
+				  		<img src="images/puertorico.jpg">
+				  		</a>
+					    <div class="content">
+					    <a href="games/legacy.html">
+					      <h3> 	Puerto Rico</h3>
+					      </a>
+					      <p><b>Score:</b> 8.005<b>    Price:</b> $23.45</p>
+					    </div>
+					</div>
+
+					<div class="wf-box">
+				  		<a href="games/legacy.html"> 
+				  		<img src="images/7wondersduel.jpg">
+				  		</a>
+					    <div class="content">
+					    <a href="games/legacy.html">
+					      <h3> 	7 Wonders Dual</h3>
+					      </a>
+					      <p><b>Score:</b> 8.005<b>    Price:</b> $24.97</p>
+					    </div>
+					</div>
+
+					<div class="wf-box">
+				  		<a href="games/legacy.html"> 
+				  		<img src="images/scythe.jpeg">
+				  		</a>
+					    <div class="content">
+					    <a href="games/legacy.html">
+					      <h3> 	Scythe</h3>
+					      </a>
+					      <p><b>Score:</b> 7.999<b>    Price:</b> $89.99</p>
+					    </div>
+					</div>
+
+					<div class="wf-box">
+				  		<a href="games/legacy.html"> 
+				  		<img src="images/burgundy.jpg">
+				  		</a>
+					    <div class="content">
+					    <a href="games/legacy.html">
+					      <h3> 	The Castles of Burgundy</h3>
+					      </a>
+					      <p><b>Score:</b> 7.995<b>    Price:</b> $21.02</p>
+					    </div>
+					</div>
+
+					<div class="wf-box">
+				  		<a href="games/legacy.html"> 
+				  		<img src="images/agricola.jpg">
+				  		</a>
+					    <div class="content">
+					    <a href="games/legacy.html">
+					      <h3> 	The Castles of Burgundy</h3>
+					      </a>
+					      <p><b>Score:</b> 7.988<b>    Price:</b> $50.64</p>
+					    </div>
+					</div>
+
+					<div class="wf-box">
+				  		<a href="games/legacy.html"> 
+				  		<img src="images/throughtheages.jpg">
+				  		</a>
+					    <div class="content">
+					    <a href="games/legacy.html">
+					      <h3> 	Through the Ages: A Story of Civilization</h3>
+					      </a>
+					      <p><b>Score:</b> 7.968<b>    Price:</b> $19.25</p>
+					    </div>
+					</div>
+					
+					<div class="wf-box">
+				  		<a href="games/legacy.html"> 
+				  		<img src="images/mageknight.jpg">
+				  		</a>
+					    <div class="content">
+					    <a href="games/legacy.html">
+					      <h3> 	Mage Knight</h3>
+					      </a>
+					      <p><b>Score:</b> 7.950<b>    Price:</b> $49.99</p>
+					    </div>
+					</div>
+
 				  </div>
 				</div>
-			</div>
-			</div>
-			</div>
-			</div>
-			</div>
 			<footer>
 				
 			</footer>
