--- a/Homepage/forum.html
+++ b/Homepage/forum.html
@@ -4,7 +4,7 @@
 		<head>
 			<meta charset="utf-8">	
 			<meta name="description" content="Board Games">
-			<meta name="keywords" content="boardgamegeek, board game geek, board games, tabletop, tabletop gaming">
+			<meta name="keywords" content="boardgamegeek, board game geek, board games, forums, community, discussion, game design, tabletop, tabletop gaming">
 			<link rel="stylesheet" href="css/forumstyle.css">
 			<link rel="stylesheet" href="css/navstyle.css">
 			<link rel="stylesheet" href="css/wf-style.css">
