--- a/Homepage/games.html
+++ b/Homepage/games.html
@@ -5,7 +5,7 @@
 		<head>
 			<meta charset="utf-8">	
 			<meta name="description" content="Board Games">
-			<meta name="keywords" content="boardgamegeek, board game geek, board games, tabletop, tabletop gaming">
+			<meta name="keywords" content="boardgamegeek, board game geek, board games, buy games, search games, game database, tabletop, tabletop gaming">
 			<link rel="stylesheet" href="css/style.css">
 			<link rel="stylesheet" href="css/navstyle.css">
 			<link rel="stylesheet" href="css/wf-style.css">
