--- a/Homepage/searchresults.html
+++ b/Homepage/searchresults.html
@@ -4,7 +4,7 @@
 		<head>
 			<meta charset="utf-8">	
 			<meta name="description" content="Board Games">
-			<meta name="keywords" content="boardgamegeek, board game geek, board games, tabletop, tabletop gaming">
+			<meta name="keywords" content="boardgamegeek, board game geek, board games, search, database, information, tabletop, tabletop gaming">
 			<link rel="stylesheet" href="../css/topicstyle.css">
 			<link rel="stylesheet" href="../css/navstyle.css">
 			<link rel="stylesheet" href="../css/wf-style.css">
